--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,7 +1,7 @@
 body {
     width: 400px;
     height: 400px;
-    background-color: darkslategrey;
+    background-color: #1f1f1f;
 }
 
 #main-container {
