--- a/popup/popup.css
+++ b/popup/popup.css
@@ -26,7 +26,8 @@ body {
     height: 75%;
     width: 90%;
     border-radius: 1em;
-    padding: 1rem;
+    padding: 1em;
+    margin: 1em;
     overflow: scroll;
     background-color: #2f2f2f;
 }
@@ -44,4 +45,12 @@ body {
 .summarize-btn.active {
     background-color: #4CAF50;
     color: white;
+}
+
+#spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    opacity: 0;
+    transition: opacity 0.3s ease;
 }
