--- a/popup/popup.css
+++ b/popup/popup.css
@@ -40,6 +40,11 @@ body {
     width: 7em;
     height: 2em;
     border-radius: 0.7em;
+    transition: background-color 0.3s ease;
+}
+
+.summarize-btn:hover {
+    cursor: pointer;
 }
 
 .summarize-btn.active {
